--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,13 +28,13 @@ jobs:
           id: meta
           uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
           with:
-            images: ${{ github.repository }}
+            images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
         - name: Set up QEMU
           uses: docker/setup-qemu-action@v2
         - name: Set up Docker Buildx
           uses: docker/setup-buildx-action@v2
         - name: Build and push Docker image
-          uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+          uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
           with:
             context: .
             file: ./Dockerfile
